--- a/source/test/test.html
+++ b/source/test/test.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="preload" href="test.js">
 </head>
 <body>
 
 </body>
 </html>
 
-<script type="module">
-  import a from './test.js';
-  console.log(a);
+<script>
+  setTimeout(() => {
+    let script2 = document.createElement('script');
+    script2.src = 'test2.js';
+    document.head.appendChild(script2);
 
+    let script = document.createElement('script');
+    script.src = 'test.js';
+    document.head.appendChild(script);
+  }, 3000)
 </script>
+
